--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.4.",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
-    "expo-av": "^13.2.1",
+    "expo-av": "~13.2.1",
     "expo-navigation-bar": "~2.1.1",
-    "expo-sharing": "^11.2.2",
+    "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
