--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-select-dropdown": "^3.3.4",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "expo-build-properties": "~0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
