--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
+    "expo-build-properties": "~0.6.0",
     "expo-navigation-bar": "~2.1.1",
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
@@ -41,7 +42,7 @@
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
     "yup": "^1.2.0",
-    "expo-build-properties": "~0.6.0"
+    "expo-document-picker": "~11.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
