--- a/app.json
+++ b/app.json
@@ -44,6 +44,12 @@
             "deploymentTarget": "13.0"
           }
         }
+      ],
+      [
+        "expo-document-picker",
+        {
+          "iCloudContainerEnvironment": "Production"
+        }
       ]
     ]
   }
