--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~48.0.18",
     "expo-av": "~13.2.1",
     "expo-build-properties": "~0.6.0",
+    "expo-document-picker": "~11.2.2",
     "expo-navigation-bar": "~2.1.1",
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
@@ -41,8 +42,7 @@
     "react-native-select-dropdown": "^3.3.4",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
-    "yup": "^1.2.0",
-    "expo-document-picker": "~11.2.2"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
