--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "Gomike",
+    "name": "Voice Pilot",
     "slug": "voicepilot",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/voicito.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/gomike_main.png",
+      "image": "./assets/voicepilot.png",
       "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
