--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.2",
+    "just-debounce-it": "^3.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
