--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-av": "~13.2.1",
     "expo-build-properties": "~0.6.0",
     "expo-document-picker": "~11.2.2",
+    "expo-file-system": "~15.2.2",
     "expo-navigation-bar": "~2.1.1",
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
