--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-select-dropdown": "^3.3.4",
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
+    "socket.io-client": "^4.7.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
