--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Voice Pilot",
+    "name": "Maic",
     "slug": "voicepilot",
     "version": "1.0.0",
     "orientation": "portrait",
